# 6502Emulator

./: .gitignore  CMakeLists.txt  Readme.md
Assembly/: func_test.a65  func_test.lst  helloworld.asm  helloworld.lst  test.asm  test.prg
E6502Lib/: CMakeLists.txt
E6502Lib/src/: cpu.cpp  cpu.h  instruction_handler.h  instruction_manager.cpp  instruction_manager.h  instructions.h  main.cpp  main.h  memory.h  system.cpp  system.h  types.h
E6502Lib/src/instructions/: abstract_instruction.h  arithmetic_instruction.cpp  arithmetic_instruction.h  base.cpp  base.h  branch_instruction.cpp  branch_instruction.h  incdec_instruction.cpp  incdec_instruction.h  instruction_utils.h  jsr.cpp  jsr.h  jump_instruction.cpp  jump_instruction.h  lda.cpp  lda.h  ldaxy.cpp  ldaxy.h  load_instruction.cpp  load_instruction.h  logic_instruction.cpp  logic_instruction.h  shift_instruction.cpp  shift_instruction.h  stack_instruction.cpp  stack_instruction.h  status_instruction.cpp  status_instruction.h  store_instruction.cpp  store_instruction.h  transfer_instruction.cpp  transfer_instruction.h
E6502Test/: CMakeLists.txt  TODOList.txt
E6502Test/src/: cpu.cpp  gtest_main.cpp  instruction_handler.cpp  instruction_manager.cpp  memory.cpp  test_main.cpp  test_program.cpp  test_system.cpp  types.cpp
E6502Test/src/instructions/: abstract_instruction.cpp  arithmetic_instruction.cpp  base.cpp  branch_instruction.cpp  incdec_instruction.cpp  instruction_test.h  instruction_utils.cpp  jsr.cpp  jump_instruction.cpp  lda.cpp  ldaxy.cpp  load_instruction.cpp  logic_instruction.cpp  shift_instruction.cpp  stack_instruction.cpp  status_instruction.cpp  store_instruction.cpp  transfer_instruction.cpp
